--- a/src/style.css
+++ b/src/style.css
@@ -93,7 +93,7 @@ h1.temp {
   font-family: "Open Sans", sans-serif;
 }
 
-.date {
+.forecast-date {
   font-size: medium;
   font-family: "Open Sans", sans-serif;
 }
