--- a/src/style.css
+++ b/src/style.css
@@ -1,99 +1,93 @@
 body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
+  font-family: arial, sans-serif;
+}
+
+h1 {
+  color: #878787;
+  font-size: 24px;
+  font-weight: 100;
+  line-height: 28px;
+  margin-bottom: 0;
+}
+
+ul {
   margin: 0;
-  font-family: "Open Sans", sans-serif;
-  background: #222;
-  opacity: 76%;
-  background-image: url("https://source.unsplash.com/1600x900/?landscape");
-  font-size: 120%;
+  padding: 0;
 }
 
-.card {
-  background: #000000d0;
-  color: white;
-  padding: 2em;
-  border-radius: 30px;
-  width: 100%;
-  max-width: 420px;
-  margin: 1em;
-}
-
-.search {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-button {
-  margin: 0.5em;
-  border-radius: 50%;
-  border: none;
-  height: 44px;
-  width: 44px;
-  outline: none;
-  background: #7c7c7c2b;
-  color: white;
-  cursor: pointer;
-  transition: 0.2s ease-in-out;
-}
-
-input.search-bar {
-  border: none;
-  outline: none;
-  padding: 0.4em 1em;
-  border-radius: 24px;
-  background: #7c7c7c2b;
-  color: white;
-  font-family: inherit;
-  font-size: 105%;
-  width: calc(100% - 100px);
-}
-
-button:hover {
-  background: #7c7c7c6b;
-}
-
-h1.temp {
+li {
+  list-style: none;
   margin: 0;
-  margin-bottom: 0.4em;
+  padding: 0;
+
+  color: rgb(135, 135, 135);
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
 }
 
-.flex {
-  display: flex;
-  align-items: center;
-}
-
-.description {
+li:first-letter {
   text-transform: capitalize;
-  margin-left: 8px;
 }
 
-.weather.loading {
-  visibility: hidden;
-  max-height: 20px;
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.weather-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+}
+
+.overview {
+  margin-bottom: 20px;
+}
+
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
+  font-size: 64px;
+  line-height: 1;
+  font-weight: 400;
+}
+
+.weather-temperature .units {
   position: relative;
+  font-size: 16px;
+  top: -34px;
 }
 
-.weather.loading:after {
-  visibility: visible;
-  content: "Loading...";
-  color: white;
-  position: absolute;
-  top: 0;
-  left: 20px;
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
 }
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
+
 .weather-forecast {
   margin-top: 20px;
-}
-.forecast-temp {
-  font-size: small;
-  font-family: "Open Sans", sans-serif;
+  text-align: center;
+  color: #000;
 }
 
-.forecast-date {
-  font-size: medium;
-  font-family: "Open Sans", sans-serif;
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temperatures {
+  font-size: 13px;
 }
